force-app/main/default/objects/Practitioner_Travel_Cost__c/Practitioner_Travel_Cost__c.object-meta.xml
<CustomObject>
    <label>Practitioner Travel Cost</label>
    <nameField>
        <displayFormat>TC{000000}</displayFormat>
        <label>Practitioner Travel Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practitioner Travel Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>