force-app/main/default/objects/Practitioner_Travel_Cost__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Travel</relationshipLabel>
    <relationshipName>Practitioner_Travel_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>