force-app/main/default/objects/Practitioner_Travel_Cost__c/fields/Return_Travel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Return_Travel_Cost__c</fullName>
    <label>Return Travel Cost</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>