force-app/main/default/objects/Practitioner_Travel_Cost__c/fields/Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue Name</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Practitioner Travel Costs</relationshipLabel>
    <relationshipName>Practitioner_Travel_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>